--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -747,7 +747,7 @@ jobs:
       
       # iOS: Upload to TestFlight using Apple's recommended action
       - name: Upload to TestFlight
-        if: matrix.platform == 'iOS' && github.event_name == 'workflow_dispatch' && inputs.upload_to_testflight == true
+        if: matrix.platform == 'iOS' && (github.event_name == 'push' || (github.event_name == 'workflow_dispatch' && inputs.upload_to_testflight == true))
         uses: apple-actions/upload-testflight-build@v1
         with:
           app-path: 'build/iOS/iOS/export/StashDemo.ipa'
@@ -786,18 +786,14 @@ jobs:
         uses: google-github-actions/upload-cloud-storage@v3
         with:
           path: ${{ env.APK_FILE }}
-          destination: stash_sdk_demo/Android/latest/StashDemo.apk
-          parent: false
-          gzip: false
+          destination: stash_sdk_demo/Android/latest/
       
       - name: Upload latest iOS IPA to GCS
         if: matrix.platform == 'iOS'
         uses: google-github-actions/upload-cloud-storage@v3
         with:
           path: build/iOS/iOS/export/StashDemo.ipa
-          destination: stash_sdk_demo/iOS/latest/StashDemo.ipa
-          parent: false
-          gzip: false
+          destination: stash_sdk_demo/iOS/latest/
       
       - name: Create latest build archive
         if: matrix.platform != 'Android' && matrix.platform != 'iOS'
@@ -815,9 +811,7 @@ jobs:
         uses: google-github-actions/upload-cloud-storage@v3
         with:
           path: ${{ github.workspace }}/${{ matrix.platform }}-latest.zip
-          destination: stash_sdk_demo/${{ matrix.platform }}/latest/${{ matrix.platform }}-latest.zip
-          parent: false
-          gzip: false
+          destination: stash_sdk_demo/${{ matrix.platform }}/latest/
 
 
 
