--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,7 @@ on:
           - StandaloneWindows64
           - Android
           - iOS
+          - StandaloneOSX
       upload_to_testflight:
         description: 'Upload to TestFlight (iOS only)'
         required: false
@@ -40,7 +41,7 @@ jobs:
       - id: set-platforms
         run: |
           if [ "${{ github.event_name }}" = "push" ]; then
-            echo 'platforms=["Android","iOS","StandaloneWindows64"]' >> $GITHUB_OUTPUT
+            echo 'platforms=["Android","iOS","StandaloneWindows64","StandaloneOSX"]' >> $GITHUB_OUTPUT
           else
             echo "platforms=[\"${{ inputs.platform }}\"]" >> $GITHUB_OUTPUT
           fi
@@ -48,7 +49,7 @@ jobs:
   build:
     name: Build for ${{ matrix.platform }}
     needs: determine-platforms
-    runs-on: ${{ matrix.platform == 'iOS' && 'macos-latest' || 'ubuntu-latest' }}
+    runs-on: ${{ (matrix.platform == 'iOS' || matrix.platform == 'StandaloneOSX') && 'macos-latest' || 'ubuntu-latest' }}
     strategy:
       matrix:
         platform: ${{ fromJSON(needs.determine-platforms.outputs.platforms) }}
@@ -259,7 +260,7 @@ jobs:
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
           targetPlatform: ${{ matrix.platform }}
-          buildName: ${{ matrix.platform == 'iOS' && 'iOS' || matrix.platform }}
+          buildName: ${{ matrix.platform == 'iOS' && 'iOS' || (matrix.platform == 'StandaloneOSX' && 'macOS' || matrix.platform) }}
           androidExportType: ${{ matrix.platform == 'Android' && 'androidPackage' || '' }}
           androidKeystoreName: ${{ matrix.platform == 'Android' && 'user.keystore' || '' }}
           androidKeystoreBase64: ${{ matrix.platform == 'Android' && secrets.ANDROID_KEYSTORE_BASE64 || '' }}
@@ -812,6 +813,7 @@ jobs:
         with:
           path: ${{ github.workspace }}/${{ matrix.platform }}-latest.zip
           destination: stash_sdk_demo/${{ matrix.platform }}/latest/
+
 
 
 
