--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -296,9 +296,11 @@ jobs:
       - name: Build Unity project
         uses: game-ci/unity-builder@v4
         env:
-          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+          # Windows: Use email/password activation only (license file may be platform-specific)
+          # Other platforms: Use both license file and email/password
           UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
+          UNITY_LICENSE: ${{ matrix.platform != 'StandaloneWindows64' && secrets.UNITY_LICENSE || '' }}
           # Windows: Enable verbose logging for debugging
           UNITY_LOG_LEVEL: ${{ matrix.platform == 'StandaloneWindows64' && 'Debug' || 'Info' }}
         with:
