--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -296,11 +296,11 @@ jobs:
       - name: Build Unity project
         uses: game-ci/unity-builder@v4
         env:
-          # Windows: Use email/password activation only (license file may be platform-specific)
-          # Other platforms: Use both license file and email/password
+          # Use license file for all platforms (license files are cross-platform XML)
+          # Email/password are used as fallback if license file activation fails
+          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
           UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
-          UNITY_LICENSE: ${{ matrix.platform != 'StandaloneWindows64' && secrets.UNITY_LICENSE || '' }}
           # Windows: Enable verbose logging for debugging
           UNITY_LOG_LEVEL: ${{ matrix.platform == 'StandaloneWindows64' && 'Debug' || 'Info' }}
         with:
