--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -251,6 +251,21 @@ jobs:
             echo "---"
           done
       
+      # Windows: Ensure Docker is ready for Unity builds
+      - name: Verify Docker for Windows builds
+        if: matrix.platform == 'StandaloneWindows64'
+        shell: powershell
+        run: |
+          Write-Host "Verifying Docker is available..."
+          docker --version
+          Write-Host "Docker is ready"
+          
+          # Ensure Library folder exists (Unity builder expects it)
+          if (-not (Test-Path "Library")) {
+            Write-Host "Creating Library folder..."
+            New-Item -ItemType Directory -Path "Library" | Out-Null
+          }
+      
       # Build Unity project
       - name: Build Unity project
         uses: game-ci/unity-builder@v4
@@ -258,6 +273,8 @@ jobs:
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
           UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
+          # Windows: Set Docker options for better compatibility
+          DOCKER_BUILDKIT: ${{ matrix.platform == 'StandaloneWindows64' && '1' || '0' }}
         with:
           targetPlatform: ${{ matrix.platform }}
           buildName: ${{ matrix.platform == 'iOS' && 'iOS' || (matrix.platform == 'StandaloneOSX' && 'macOS' || matrix.platform) }}
